AirBnB_clone update changes

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # List of all individuals who contributed to the repository
 
-Neville Omondi    --> <nevillejeck002@gmail.com>
-Fredrick Abongfo --> <ngoloabongo32@gmail.com>
+Neville Omondi  <nevillejeck002@gmail.com>
+Fredrick Abongo <ngoloabongo32@gmail.com>
